# rag-custom

./: .env.example  .gitignore  LICENSE  README.md  app.py  app_chunking.py  app_vdb_milvus.py  data_loader.sh  docker-compose-milvus.yml  docker-compose.yml  ingestion_kb.py  pyproject.toml  rag_service.py  requirements.txt  rerank_service.py  research.ipynb  test_vdb_milvus.ipynb
.github/workflows/: ci.yml
deploy/compose/: Dockerfile  docker-compose-embedding.yaml  docker-compose-ingestor.yaml  docker-compose-milvus.yml  docker-compose-rag-server.yaml  docker-compose.yaml
deploy/compose/monitoring/: docker-compose.yaml
deploy/config/: grafana-dashboard-provisioning.yaml  grafana.yaml  observability.yaml  otel-collector-config.yaml  rag-metrics-dashboard.json
research/: chunks.json  chunks_2.json  cv_extraction.ipynb  extraction_and_chunking.ipynb  finetuning.ipynb  indexation.ipynb
scripts/: download_sample_pdfs.sh
src/evaluation/: build_dataset_filter.py  evaluation_finale.csv  evaluation_rag.py  mlflow.db
src/evaluation/.deepeval/: .deepeval_telemetry.txt
src/evaluation/data/: testset_complex.jsonl  testset_filtered.jsonl
src/evaluation/mlruns/1/42794fbb49944b87811e9fc7c1ac3a5a/artifacts/: testset_preview.json
src/evaluation/mlruns/1/469ac5bab944445b89e30b90ab590435/artifacts/: testset_filtered.jsonl
src/evaluation/mlruns/1/d87ba3c630314f0a9cbe1758b51f0a0b/artifacts/: testset_preview.json
src/evaluation/mlruns/1/efb7a45fe10e4637b4e1e17872c9ac26/artifacts/: testset_preview.json
src/evaluation/mlruns/966381670208774386/: meta.yaml
src/evaluation/mlruns/966381670208774386/18831f374aef4d38a0a3103bcf31d4fc/: meta.yaml
src/evaluation/mlruns/966381670208774386/18831f374aef4d38a0a3103bcf31d4fc/params/: agentic_features
src/evaluation/mlruns/966381670208774386/18831f374aef4d38a0a3103bcf31d4fc/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
src/evaluation/research/: build_dataset.py  evaluation_ragas_ministere.csv  metrics_analysis.ipynb
src/evaluation/utils/: template_build_dataset.ipynb
src/finetuning-refactor/: finetuning.ipynb  finetuning_embedding.ipynb  ingestion_kb_finetuning_batch.py  insert_collection.ipynb
src/finetuning-refactor/utils/dataset_triplets/: valid.jsonl
src/finetuning_embedding/: build_dataset.ipynb  finetuning_embedding_e5.ipynb  finetuning_embedding_qwen3:0.6b.ipynb
src/finetuning_embedding/dataset_triplets/: test.jsonl  train.jsonl  valid.jsonl
src/finetuning_embedding/legacy/: finetuning_embedding.ipynb  ingestion_kb.py
src/finetuning_embedding/utils/data/: testset.jsonl
src/finetuning_embedding/utils/data/chunks/39308d732c910bca/: chunks.json
src/finetuning_embedding/utils/dataset_triplets/: test.jsonl  train.jsonl
src/ingestor_server/ingestor_service/: app_chunks.py  ingestor.py
src/ingestor_server/vdb_service/: app_vdb_milvus.py
src/rag_server/: observability.py  prompt.yaml  rag_service.py  rag_service_langfuse.py  rag_service_telemetry.py
src/rag_server/config/: config.yml
src/rag_server/gliner_server/: models.py  pii_utils.py  server.py
src/rag_server/gliner_server/tests/: test_pii_utils.py
src/rag_server/legacy/: mlflow.db  rag_service.py  rag_service_langfuse.py  rag_service_leg.py  rag_service_mlflow.py
src/rerank_server/: rerank_service.py  start_reranker.sh
src/utils/: custom_embedding.py  docling_chunker.py
tests/: conftest.py  test_chunking_api.py  test_rag_service.py  test_rerank_service.py
utils/chunking/: chunks_pdfs_words.py  chunks_ppt.py  factory.py
volumes/etcd/member/snap/: 0000000000000005-000000000000c351.snap  0000000000000006-00000000000186a2.snap
volumes/milvus/data/cache/16/local_chunk/: seg_463593467438373257_cg_103_0  seg_463917161141324912_cg_101_0  seg_463917161141324912_cg_108_0
volumes/milvus/data/cache/4/local_chunk/: seg_463593467438373257_cg_101_0
volumes/minio/.minio.sys/: format.json
volumes/minio/.minio.sys/tmp/.trash/00b74cd6-6849-43f6-bcb7-c4040fbc9375/: xl.meta.bkp
volumes/minio/.minio.sys/tmp/.trash/013b2552-9486-4f1e-a8b9-848c76689343/: xl.meta.bkp
volumes/minio/.minio.sys/tmp/.trash/02ad9f42-796b-436a-9e9c-b660e8f6a114/: xl.meta.bkp
volumes/minio/.minio.sys/tmp/.trash/0885f449-3f03-406a-b3ad-e06c116137e8/: xl.meta.bkp
volumes/minio/.minio.sys/tmp/.trash/09a4bd00-7a34-4204-a253-0aa7c3599c92/: xl.meta.bkp
volumes/minio/.minio.sys/tmp/.trash/0a6abfaa-7639-4172-a460-e7c5bac22555/: xl.meta.bkp
volumes/minio/.minio.sys/tmp/.trash/0aa79727-6a43-4a1b-b60d-b07b63df9283/: xl.meta.bkp
volumes/minio/.minio.sys/tmp/.trash/0f592b76-47f3-49f6-b659-63ca5ab47377/: xl.meta.bkp
volumes/minio/.minio.sys/tmp/.trash/0fe12273-0b38-4f03-9a5e-d6c667f1258f/: xl.meta.bkp
volumes/minio/.minio.sys/tmp/.trash/100d27cc-98ae-4e2f-87a8-e690a6050495/: xl.meta.bkp
volumes/minio/.minio.sys/tmp/.trash/11fab7ee-808b-40dc-ada8-457317d8d2e1/: xl.meta.bkp
volumes/minio/.minio.sys/tmp/.trash/14d21bdb-efc6-4d6c-babb-6ebd22b63259/: xl.meta.bkp
volumes/minio/.minio.sys/tmp/.trash/158861bb-665d-429e-9fde-172dedcdc895/: xl.meta.bkp
volumes/minio/.minio.sys/tmp/.trash/15dc1a3b-7948-4924-87e5-558c7d3ce167/: xl.meta.bkp
(+128 files in other folders)
