[tool.poetry]
name = "rag-custom"
version = "0.1.0"
package-mode = false
description = "Production RAG platform: FastAPI microservices, Milvus hybrid search, BGE reranking, Langfuse observability"
authors = ["Feriel Oulhadj"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"


# --- API & SERVEUR ---
fastapi = "0.124.0"
uvicorn = { extras = ["standard"], version = "0.38.0" }
python-multipart = "0.0.21"
python-dotenv = "1.2.1"
httpx = "0.28.1"
requests = "2.32.5"
pydantic = "2.12.5"
urllib3 = "1.26.20"
chardet = "5.2.0"
charset-normalizer = "3.4.0"

# --- DOCLING & OCR (Extraction) ---
docling = "2.64.0"
docling-core = "2.54.1"
docling-ocr-onnxtr = "0.2.1"
onnxtr = "0.8.1"
onnxruntime = "1.23.2"
# onnxruntime-gpu  # ou onnxruntime-gpu si tu as un GPU NVIDIA
ultralytics = "8.3.235"
pillow = "11.3.0"
tiktoken = "0.12.0"
ocrmac = { version = "1.0.0", markers = "sys_platform == 'darwin'" }

# --- RAG & ORCHESTRATION ---
langchain = "1.2.0"
langchain-core = "1.2.7"
langchain-community = "0.4.1"
langchain-ollama = "1.0.1"
langchain-experimental = "0.4.1"
ollama = "0.6.1"


# --- EMBEDDINGS & RERANK ---
torch = "2.9.1"

# --- BASE DE DONNÉES VECTORIELLE ---
pymilvus = "2.6.5"

# --- MONITORING & EVALUATION ---
langfuse = "2.60.10"
mlflow = "3.10.1"
giskard = "2.18.0"
flask = "3.1.3"
flask-cors = "6.0.2"
alembic = "1.18.4"

# --- UTILS ---
pyyaml = "6.0.3"
transformers = "4.57.3"  
tokenizers = "0.22.1"    
sentence-transformers = "5.2.0"
FlagEmbedding = "1.3.5"
redis = "^7.4.0"
gliner = "^0.2.26"
nemoguardrails = "^0.21.0"
opentelemetry-sdk = "^1.41.0"
opentelemetry-exporter-otlp = "^1.41.0"
opentelemetry-instrumentation-fastapi = "^0.62b0"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
black = "^24.0.0"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["src/ingestor_server/ingestor_service/legacy/"]

[tool.ruff.lint]
# Codes ignored globally: pre-existing patterns in service code that would
# require deep refactoring (type annotations, broad-except, import ordering).
ignore = [
    "I001",    # import sorting — pre-existing across all services
    "BLE001",  # blind except — intentional in service error handlers
    "UP006",   # List/Dict → list/dict — pre-existing annotations
    "UP035",   # deprecated typing imports — pre-existing
    "UP045",   # Optional[X] → X | None — pre-existing
    "S110",    # try-except-pass — pre-existing
    "ASYNC230","B008","DTZ005","E722","EXE001",
    "PLW1508","RUF010","RUF013","SIM102","SIM210","TRY201",
]

[tool.ruff.lint.per-file-ignores]
# conftest imports service modules for side effects (pre-loading into sys.modules)
"tests/conftest.py" = ["F401", "E402"]
# Files with commented-out legacy code containing unused imports
"src/utils/docling_chunker.py" = ["F401", "F811", "F541"]
"src/rerank_server/rerank_service.py" = ["F401"]
"src/ingestor_server/ingestor_service/app_chunks.py" = ["F401", "UP041"]
"src/ingestor_server/ingestor_service/ingestor.py" = ["F401", "F811"]
"src/ingestor_server/vdb_service/app_vdb_milvus.py" = ["F401", "F811", "F541"]
"src/rag_server/rag_service_telemetry.py" = ["F401", "F541"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"